--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,25 @@
       "destination": "/index.html"
     }
   ],
+  "headers": [
+    {
+      "source": "/models/(.*\\.tar\\.gz)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/gzip"
+        },
+        {
+          "key": "Content-Encoding",
+          "value": "identity"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
