docs: Add Android build setup and model preparation scripts
- Create prepare-models.js for automatic model file verification
- Add prepare-models.sh and .bat scripts for manual preparation
- Integrate model preparation into npm build pipeline
- Document Android build process for voice recognition
- Update package.json to run model preparation before builds
- English model (41.1 MB) is committed to GitHub
- Filipino model (313 MB) must be manually added for Android
- Web builds use Web Speech API fallback (no models needed)

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run prepare-models && vite build",
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare-models": "node scripts/prepare-models.js"
   },
   "dependencies": {
     "@capacitor-community/speech-recognition": "^7.0.1",
