--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/core": "7.4.0",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/splash-screen": "^7.0.3",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/vue": "^8.6.2",
     "@ionic/vue-router": "^8.6.2",
