--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@capacitor-community/speech-recognition": "^7.0.1",
+    "@capacitor-community/text-to-speech": "^6.1.0",
     "@capacitor/android": "^7.4.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.4.0",
